@@ -1,0 +1,4 @@
+usr/include/moira/mrclient.h
+usr/lib/libmrclient.so
+usr/lib/libmrclient.la
+usr/lib/libmrclient.a
